<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">FoodBit</string>
    <string name="title_ingredient_storage">Ingredients</string>
    <string name="title_recipe_book">Recipes</string>
    <string name="title_meal_plan">Meal Plan</string>
    <string name="title_shopping_cart">Shopping Cart</string>
    <string name="hello_blank_fragment" tools:ignore="UnusedResources">Hello blank fragment</string>
    <string name="ingredient">INGREDIENT</string>
    <string name="amount">AMOUNT</string>
    <string name="unit">UNIT</string>
    <string name="category">CATEGORY</string>
    <string name="description">DESCRIPTION</string>
    <string name="ingredient_image">ingredient image</string>
    <string name="patty">Patty</string>
    <string name="_1">1</string>
    <string name="this_is_description">This is description</string>
    <string name="box">Box</string>
    <string name="meat">Meat</string>
    <string-array name="Categories">
        <item>vegetables</item>
        <item>fruits</item>
        <item>grains</item>
    </string-array>
</resources>