<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".ui.ShoppingCartFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.5"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/title_ingredient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:background="#4D808080"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/ingredient"
            android:textColor="@color/black"
            android:textSize="12sp"
            tools:ignore="NestedWeights" />

        <TextView
            android:id="@+id/title_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:background="#4D808080"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/description"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/title_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:background="#4D808080"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/amount"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/title_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:background="#4D808080"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/unit"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/title_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:background="#4D808080"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/category"
            android:textColor="@color/black"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:padding="5dp">

        <ImageView
            android:id="@+id/image_ingredient"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:scaleType="centerInside"
            android:visibility="visible"
            android:contentDescription="@string/ingredient_image"
            app:srcCompat="@mipmap/ic_launcher"
            tools:ignore="NestedWeights" />

        <TextView
            android:id="@+id/ingredient_name"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/patty" />

        <TextView
            android:id="@+id/ingredient_description"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1.5"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/this_is_description"
            android:textSize="11sp" />

        <TextView
            android:id="@+id/ingredient_amount"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1.5"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/_1" />

        <TextView
            android:id="@+id/ingredient_unit"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1.5"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/box" />

        <TextView
            android:id="@+id/ingredient_category"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1.5"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/meat" />
    </LinearLayout>

</LinearLayout>